@@ -4506,9 +4506,9 @@ will show the compilers and configuration options used for the
 @noindent
 was used.
 
-A 64-bit @code{time_t} is used but the implementation of time zones does
-not work correctly for times after 2037 so it is not used in @R{}: those
-making use of such dates are recommended to use the option
+A 64-bit @code{time_t} is available but the implementation of time zones
+does not work correctly for times after 2037 so it is not used in @R{}:
+those making use of such dates are recommended to use the option
 @option{--with-internal-tzcode}.
 
 The @TeX{} implementation used by the developers is MacTeX
@@ -5212,7 +5212,7 @@ workarounds added.  Cygwin has not been tested for @R{} 3.0.0 or later.
 
 @R{} requires C99 complex type support, which is available as from
 Cygwin 1.7.8 (March 2011).  However, the (then) implementation of
-@code{cacos} gives incorrect results, so we define @code{HAVE_CACOS}
+@code{cacos} gives incorrect results, so we undefine @code{HAVE_CACOS}
 in @file{src/main/complex.c} on that platform.  It has been reported
 that some C99 long double mathematical functions are missing, so
 configuring with @option{--disable-long-double} was required.
